Fix margin issue with ol elements so numbers show This commit overrides the universal * margin set to 0 made for accurate layout design because it does not leave space for the numbers and bullet points in ordered and unordered lists. The numbers are now showing and the css style sheet has been updated to add outlines around the description pages as well as a new class created to make the ordered lists be left aligned so they are more clearly connected to the numbered steps in the ol.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
 .align {
     background-position: center;
     height: 500px;
-    background-image: ;
 
 }
 #header {
@@ -47,4 +46,15 @@
 
 a:hover {
     background-color: yellow;
+}
+
+.list-margin {
+    margin: 20px;
+    padding: 20px;
+}
+
+.olfont {
+    font-size: 33px;
+    font-family: Baskerville, Albertus, Aldus, Georgia, 'Times New Roman', Times, serif;
+    text-align: left;
 }
